improved styling and ui handling

--- a/app/scripts/controller/mainView.html
+++ b/app/scripts/controller/mainView.html
@@ -5,11 +5,13 @@
 
 <div id="desk">
     <cc-new-card add-card="addCard(card)"></cc-new-card>
-    
-    <cc-card ng-repeat="card in cardList | orderBy:'cdate.valueOf()':true track by card.id " 
-             cc-card-model="card" 
-             class="card" 
-             linkable-tags 
-             on-tag-click="searchForTag(tag)"
-    ></cc-card>
+
+    <div class="pure-g">
+        <cc-card ng-repeat="card in cardList | orderBy:'cdate.valueOf()':true track by card.id "
+                 cc-card-model="card"
+                 class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3 pure-u-xl-1-4"
+                 linkable-tags
+                 on-tag-click="searchForTag(tag)"
+        ></cc-card>
+    </div>
 </div>
