--- a/app/scripts/modules/cards/newCardView.html
+++ b/app/scripts/modules/cards/newCardView.html
@@ -23,19 +23,20 @@
  * THE SOFTWARE.
  */
 -->
-<svg ng-show="currentStatus === STATUS_BUTTON" 
+<svg ng-show="!editNewCard"
      class="card-new"
-     ng-click="editNewCard()"
+     ng-click="activateEditor()"
      data-new-button
 >
   <use xlink:href="#icon-circle-with-plus"></use>
 </svg>
 
-<cc-card ng-show="currentStatus === STATUS_CARD" 
+<cc-card ng-show="editNewCard"
          cc-card-model="newCard"
          on-save="saveCard()"
+         is-edit-mode-active="editNewCard"
          linkable-tags
          on-tag-click=""
-         class="card"
+         class="card-new-editor pure-u-1 pure-u-md-1-2 pure-u-lg-1-3 pure-u-xl-1-4"
          data-card
 ></cc-card>
