create prod target to build script

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
  */
 -->
 <!DOCTYPE HTML>
-<html lang="en" ng-app="cabocabo">
+<html lang="en" ng-app="cabocabo" ng-strict-di>
 <head>
   <meta charset="UTF-8">
   <title>Cabocabo</title>
@@ -34,7 +34,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="header">Cabocabo</div>
+  <div id="header">Cabocabo <cc-menu></cc-menu></div>
   
   <ng-view></ng-view>
   
